[new]全ページレスポンシブ対応

--- a/company.html
+++ b/company.html
@@ -27,24 +27,48 @@
         </figure>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
-            <li class="l-header__nav-list-item"><a href="news/index.html">NEWS</a></li>
-            <li class="l-header__nav-list-item"><a href="service.html">SERVICE</a></li>
-            <li class="l-header__nav-list-item"><a href="works.html">WORKS</a></li>
-            <li class="l-header__nav-list-item"><a href="company.html">COMPANY</a></li>
-            <li class="l-header__nav-list-item"><a href="recruit.html">RECRUIT</a></li>
-            <li class="l-header__nav-list-item"><a href="contact.html">CONTACT</a></li>
+            <li class="l-header__nav-list-item">
+              <a href="news/index.html">NEWS</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="service.html">SERVICE</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="works.html">WORKS</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="company.html">COMPANY</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="recruit.html">RECRUIT</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="contact.html">CONTACT</a>
+            </li>
           </ul>
         </nav>
 
         <!-- ハンバーガーメニュー -->
         <nav id="js-hamburger-nav" class="l-hamburger-nav">
           <ul class="l-hamburger-nav__list">
-            <li class="l-hamburger-nav__list-item"><a href="news/index.html">NEWS</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="service.html">SERVICE</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="works.html">WORKS</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="company.html">COMPANY</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="recruit.html">RECRUIT</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="contact.html">CONTACT</a></li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="news/index.html">NEWS</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="service.html">SERVICE</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="works.html">WORKS</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="company.html">COMPANY</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="recruit.html">RECRUIT</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="contact.html">CONTACT</a>
+            </li>
           </ul>
         </nav>
         <div id="js-hamburger" class="l-hamburger">
@@ -75,10 +99,6 @@
       <!-- .c-breadcrumb -->
 
       <section class="p-index-company">
-        <figure class="p-index-company__bg">
-          <img src="/assets/img/bg/bg_company.png" />
-        </figure>
-
         <div class="p-index-company__context">
           <div class="p-index-company__context-title">
             <h2 class="c-mainTitle">メッセージ</h2>
@@ -88,8 +108,14 @@
           </h3>
           <p class="p-index-company__context-message">
             お客様の夢を叶えること。<br />
-            それがWebサイトのゴールであり、私たちが目指すことです。<br />
-            だからこそちゃんと成果を出すサイトを全力でお作りします。<br />
+            それがWebサイトのゴールであり、<span
+              class="l-additional-break"
+            ></span
+            >私たちが目指すことです。<br />
+            だからこそちゃんと成果を出すサイトを<span
+              class="l-additional-break"
+            ></span
+            >全力でお作りします。<br />
             お客様の笑顔を見たい<br />
             夢を実現する手助けをさせてください。
           </p>
@@ -109,7 +135,9 @@
             <p class="p-company__represent-message-item">
               テキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入りますテキストが入ります
             </p>
-            <p class="p-company__represent-message-item">代表取締役社長 猫山ポン太郎</p>
+            <p class="p-company__represent-message-item">
+              代表取締役社長 猫山ポン太郎
+            </p>
           </div>
         </section>
 
@@ -120,7 +148,9 @@
           <ul class="p-company__overview-list">
             <li class="p-company__overview-list-item">
               <p class="p-company__overview-list-item-title">社名</p>
-              <p class="p-company__overview-list-item-text">株式会社PON DESIGN</p>
+              <p class="p-company__overview-list-item-text">
+                株式会社PON DESIGN
+              </p>
             </li>
             <li class="p-company__overview-list-item">
               <p class="p-company__overview-list-item-title">設立</p>
@@ -136,7 +166,9 @@
             </li>
             <li class="p-company__overview-list-item">
               <p class="p-company__overview-list-item-title">所在地</p>
-              <p class="p-company__overview-list-item-text">〒555-5555 東京都千代田区 ポンビルディング 606</p>
+              <p class="p-company__overview-list-item-text">
+                〒555-5555 東京都千代田区 ポンビルディング 606
+              </p>
             </li>
           </ul>
           <figure class="p-company__overview-img">
