--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,10 @@
 
       <div class="p-contact">
         <p class="p-contact__text">
-          Webサイトの制作のご依頼やお見積りなど、お気軽にご相談ください。
+          Webサイトの制作のご依頼やお見積りなど、<span
+              class="l-additional-break"
+            ></span
+            >お気軽にご相談ください。
         </p>
 
         <form class="p-contact__form" action="" method="post">
