--- a/service.html
+++ b/service.html
@@ -55,7 +55,7 @@
       </header>
 
       <div class="l-header-sub">
-        <h3 class="l-header-sub__main-title">NEWS</h3>
+        <h3 class="l-header-sub__main-title">SERVICE</h3>
         <p class="l-header-sub__sub-title">お知らせ</p>
       </div>
       <!-- .l-header-sub -->
