--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <body>
     <div class="l-header-bg-top">
       <header class="l-header">
-        <figure class="l-header__logo">
+        <a href="/" class="l-header__logo">
           <img src="/assets/img/logo/logo.png" />
-        </figure>
+        </a>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
             <li class="l-header__nav-list-item"><a href="news/index.html">NEWS</a></li>
