--- a/recruit.html
+++ b/recruit.html
@@ -27,24 +27,48 @@
         </figure>
         <nav class="l-header__nav">
           <ul class="l-header__nav-list">
-            <li class="l-header__nav-list-item"><a href="news/index.html">NEWS</a></li>
-            <li class="l-header__nav-list-item"><a href="service.html">SERVICE</a></li>
-            <li class="l-header__nav-list-item"><a href="works.html">WORKS</a></li>
-            <li class="l-header__nav-list-item"><a href="company.html">COMPANY</a></li>
-            <li class="l-header__nav-list-item"><a href="recruit.html">RECRUIT</a></li>
-            <li class="l-header__nav-list-item"><a href="contact.html">CONTACT</a></li>
+            <li class="l-header__nav-list-item">
+              <a href="news/index.html">NEWS</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="service.html">SERVICE</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="works.html">WORKS</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="company.html">COMPANY</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="recruit.html">RECRUIT</a>
+            </li>
+            <li class="l-header__nav-list-item">
+              <a href="contact.html">CONTACT</a>
+            </li>
           </ul>
         </nav>
 
         <!-- ハンバーガーメニュー -->
         <nav id="js-hamburger-nav" class="l-hamburger-nav">
           <ul class="l-hamburger-nav__list">
-            <li class="l-hamburger-nav__list-item"><a href="news/index.html">NEWS</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="service.html">SERVICE</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="works.html">WORKS</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="company.html">COMPANY</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="recruit.html">RECRUIT</a></li>
-            <li class="l-hamburger-nav__list-item"><a href="contact.html">CONTACT</a></li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="news/index.html">NEWS</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="service.html">SERVICE</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="works.html">WORKS</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="company.html">COMPANY</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="recruit.html">RECRUIT</a>
+            </li>
+            <li class="l-hamburger-nav__list-item">
+              <a href="contact.html">CONTACT</a>
+            </li>
           </ul>
         </nav>
         <div id="js-hamburger" class="l-hamburger">
@@ -76,7 +100,12 @@
 
       <div class="p-recruit">
         <section class="p-recruit__title">
-          <h2 class="p-recruit__title-main">Enjoy Creation for Client</h2>
+          <h2 class="p-recruit__title-main">
+            Enjoy<span class="l-additional-break"></span> Creation for<span
+              class="l-additional-break"
+            ></span>
+            Client
+          </h2>
           <p class="p-recruit__title-sub">楽しむ心が良いモノを生む</p>
           <p class="p-recruit__title-text">
             心を弾ましながら<br />
