--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           <!-- .c-clearButton -->
         </div>
         <!-- .l-header-sub__button -->
+        <div class="l-header-sub-index-scroll"><span>Scroll</span></div>
       </div>
       <!-- .l-header-sub -->
     </div>
