[fix]文字の大文字修正

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <!-- .c-clearButton -->
         </div>
         <!-- .l-header-sub__button -->
-        <div class="l-header-sub-index-scroll"><span>Scroll</span></div>
+        <div class="l-header-sub-index-scroll"><span>SCROLL</span></div>
       </div>
       <!-- .l-header-sub -->
     </div>
