[fix]alt要素の追加とデザインの軽微な不具合修正

--- a/company.html
+++ b/company.html
@@ -127,7 +127,7 @@
       <div class="p-company">
         <section class="p-company__represent">
           <figure class="p-company__represent-img">
-            <img src="/assets/img/images/company.png" />
+            <img src="/assets/img/images/company.png" alt="弊社社長の画像" />
           </figure>
           <div class="p-company__represent-message">
             <p class="p-company__represent-message-item">
@@ -175,7 +175,7 @@
             </li>
           </ul>
           <figure class="p-company__overview-img">
-            <img src="/assets/img/dummy/dummyMap.png" />
+            <img src="/assets/img/dummy/dummyMap.png" alt="弊社所在地のGoogleマップ画像、現在はダミー素材"/>
           </figure>
           <a class="p-company__overview-map-link" href="#">Google mapで見る</a>
         </section>
