--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="PON DESIGNは、クリエイティブで革新的なウェブデザインソリューションを提供し、お客様のビジネスをさらなる高みへと導きます。" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
       rel="icon"
@@ -149,7 +150,7 @@
         <div class="p-index-service__cards">
           <div class="c-serviceCard">
             <figure class="c-serviceCard__img">
-              <img src="/assets/img/images/servise_production.png" />
+              <img src="/assets/img/images/servise_production.png" alt="Webサイト制作を行なっているPCの画像"/>
             </figure>
             <h3 class="c-serviceCard__title">Webサイト制作</h3>
             <p class="c-serviceCard__context">
@@ -159,7 +160,7 @@
           <!-- .c-serviceCard -->
           <div class="c-serviceCard">
             <figure class="c-serviceCard__img">
-              <img src="/assets/img/images/service_operation.png" />
+              <img src="/assets/img/images/service_operation.png"alt="Webサイト運用を行なっているPCの画像" />
             </figure>
             <h3 class="c-serviceCard__title">Webサイト運用</h3>
             <p class="c-serviceCard__context">
@@ -169,7 +170,7 @@
           <!-- .c-serviceCard -->
           <div class="c-serviceCard">
             <figure class="c-serviceCard__img">
-              <img src="/assets/img/images/service_app.png" />
+              <img src="/assets/img/images/service_app.png" alt="アイフォンでアプリ操作をしている画像" />
             </figure>
             <h3 class="c-serviceCard__title">アプリ開発</h3>
             <p class="c-serviceCard__context">
@@ -182,7 +183,7 @@
         <div class="p-index-service__button">
           <div class="c-mainButton">
             <a href="service.html"> MORE </a>
-            <img src="/assets/img/logo/caret-right_14px.png" />
+            <img src="/assets/img/logo/caret-right_14px.png" alt="右矢印の画像" />
           </div>
           <!-- .c-mainButton -->
         </div>
@@ -191,7 +192,7 @@
 
       <section class="p-index-works">
         <figure class="p-index-works__img">
-          <img src="/assets/img/images/work1.png" />
+          <img src="/assets/img/images/work1.png" alt="Smoothiesta様のHP画像" />
         </figure>
 
         <div class="p-index-works__context">
@@ -206,7 +207,7 @@
           <div class="p-index-works__context-button">
             <div class="c-mainButton">
               <a href="works.html"> MORE </a>
-              <img src="/assets/img/logo/caret-right_14px.png" />
+              <img src="/assets/img/logo/caret-right_14px.png" alt="右矢印の画像" />
             </div>
             <!-- .c-mainButton -->
           </div>
@@ -239,7 +240,7 @@
           <div class="p-index-company__context-button">
             <div class="c-mainButton">
               <a href="company.html"> MORE </a>
-              <img src="/assets/img/logo/caret-right_14px.png" />
+              <img src="/assets/img/logo/caret-right_14px.png" alt="右矢印の画像" />
             </div>
             <!-- .c-mainButton -->
           </div>
@@ -260,7 +261,7 @@
           <div class="p-index-recruit__context-button">
             <div class="c-mainButton">
               <a href="recruit.html"> MORE </a>
-              <img src="/assets/img/logo/caret-right_14px.png" />
+              <img src="/assets/img/logo/caret-right_14px.png" alt="右矢印の画像" />
             </div>
             <!-- .c-mainButton -->
           </div>
@@ -269,7 +270,7 @@
         <!-- .p-index-recruit__context -->
 
         <figure class="p-index-recruit__img">
-          <img src="/assets/img/images/recruit.png" />
+          <img src="/assets/img/images/recruit.png" alt="ホワイトボードの前で会話をする二人の女性の画像" />
         </figure>
       </section>
 
