--- a/recruit.html
+++ b/recruit.html
@@ -116,7 +116,7 @@
         </section>
 
         <figure class="p-recruit__img">
-          <img src="/assets/img/images/recruit_hero.png" />
+          <img src="/assets/img/images/recruit_hero.png" alt="三人の女性が業務中に談笑している画像" />
         </figure>
 
         <section class="p-recruit__context">
@@ -185,7 +185,7 @@
             <h2 class="c-mainTitle">社内ムービー</h2>
           </div>
           <figure class="p-recruit__video-img">
-            <img src="/assets/img/dummy/dummyVideo.png" />
+            <img src="/assets/img/dummy/dummyVideo.png" alt="社内ムービーの動画が埋め込まれています、現在はダミー画像です" />
           </figure>
         </section>
       </div>
