--- a/works.html
+++ b/works.html
@@ -102,35 +102,35 @@
       <div class="p-works">
         <div class="c-workCard p-works__item">
           <figure class="c-workCard__img">
-            <img src="/assets/img/images/work1.png" />
+            <img src="/assets/img/images/work1.png" alt="Smoothiesta様のHPトップ画像"/>
           </figure>
           <p class="c-workCard__text">Smoothiesta 様</p>
         </div>
         <!-- .c-workCard -->
         <div class="c-workCard p-works__item">
           <figure class="c-workCard__img">
-            <img src="/assets/img/images/work2.png" />
+            <img src="/assets/img/images/work2.png" alt="Web Conference様のHPトップ画像" />
           </figure>
           <p class="c-workCard__text">Web Conference 様</p>
         </div>
         <!-- .c-workCard -->
         <div class="c-workCard p-works__item">
           <figure class="c-workCard__img">
-            <img src="/assets/img/images/work3.png" />
+            <img src="/assets/img/images/work3.png" alt="LAMINA様のHPトップ画像" />
           </figure>
           <p class="c-workCard__text">LAMINA 様</p>
         </div>
         <!-- .c-workCard -->
         <div class="c-workCard p-works__item">
           <figure class="c-workCard__img">
-            <img src="/assets/img/images/work4.png" />
+            <img src="/assets/img/images/work4.png" alt="CITYLab様のHPトップ画像" />
           </figure>
           <p class="c-workCard__text">CITYLab 様</p>
         </div>
         <!-- .c-workCard -->
         <div class="c-workCard p-works__item">
           <figure class="c-workCard__img">
-            <img src="/assets/img/images/work5.png" />
+            <img src="/assets/img/images/work5.png" alt="TABILOG様のHPトップ画像" />
           </figure>
           <p class="c-workCard__text">TABILOG 様</p>
         </div>
